# iChat

./: .gitignore  CMakeLists.txt  README.txt  TreeColumn.cpp  TreeColumn.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  VideoPlayer.qml  iChat.qrc  main.cpp  main.qml  message_handler.cpp  message_handler.h  package.iss  qtquickcontrols2.conf  testJsonModel.qml  treevariantmodel.cpp  treevariantmodel.h  variantitem.cpp  variantitem.h
MyComponent/: ShadowRectangle.qml
db/: SqlExecutor.cpp  SqlExecutor.h
qml/componentLib/: CMakeLists.txt  DatePicker.qml  ElMonthGrid.qml  Link.qml  qmldir
qml/componentLib/Buttons/: FlatButton.qml
